Version 0.6
-----------
* Stack handlers passed to UAV::Pilot::Video::H264Decoder.  Note the API change of 
  'display' to 'displays'
* Stack handlers passed to UAV::Pilot::Driver::ARDrone::Video.  Note the API change of 
  'handler' to 'handlers'

Version 0.5
-----------
* Real-time video implemented (this is the big one)
* VideoHandler and FileDump moved into UAV::Pilot::Video namespace.  Handler role now named 
  "H264Handler".
* Joystick buttons can be mapped to actions
* Joystick module can take a path to a conf file
* bin/uav gets an --iface option for a network interface for binding


Version 0.4
-----------
* Dump video to file
    * If using mplayer to show the file, set the FPS manually with 
      "mplayer -fps 30 /path/to/file.h264"
* Rename anything that starts an event loop to init_event_loop()
* Joystick to UAV control number conversion decoupled from ARDrone specifics
* Add methods to UAV::Pilot::Control::ARDrone for userbox nav data and picture taking

Version 0.3
-----------
* Event-based interface
* Joystick control

Version 0.2
-----------
* Device renamed to Control
* Sender renamed to Driver
* Fetch demo navigation data

Version 0.1
-----------
* Piloting commands work