@@ -4,6 +4,7 @@ Version 0.6
   'display' to 'displays'
 * Stack handlers passed to UAV::Pilot::Driver::ARDrone::Video.  Note the API change of 
   'handler' to 'handlers'
+* 'uav' shell handles dumping video to file while displaying it at the same time
 
 Version 0.5
 -----------
